tests/specs/ecosystem/std/archive/0_215_0.test
std/archive/0.215.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/io@^0.215.0": "jsr:@std/io@0.215.0"
    },
    "jsr": {
      "@std/io@0.215.0": {
        "integrity": "fbd42006510b7c35657ad5ba11704db2b8fb2ce705b698b435ce801e78c00c33"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMetaWithLinkName, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                            ~~~~~~
    at file://<tmpdir>/untar.ts:16:93

